fix for simple section image overlap

--- a/components/ui-components/simple-section/simpleSection.module.css
+++ b/components/ui-components/simple-section/simpleSection.module.css
@@ -3,7 +3,6 @@
   margin: 24px 0;
   position: relative;
   margin-bottom: -10px !important;
-  max-height: 640px;
   overflow: hidden;
 }
 .textContentWrapper,
@@ -20,12 +19,6 @@
 .leftImageWrapper {
   order: 1;
 }
-/* .leftTitle {
-  text-align: start;
-}
-.leftText {
-  text-align: start;
-} */
 .simpleSectionTitleWrapper {
   display: flex;
   flex-direction: column;
